# hsp70-gestion

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: api-designer.md  coordinator.md  debugger.md  planner.md  project-scaffolder.md  refactorer.md  test-engineer.md
.tareas/: coordinator_state.json  plan.md
app/: init_db.py  main.py  seed.py
app/api/: actividades.py  asistencias.py  auth.py  ejercicios.py  evaluaciones.py  inscripciones.py  mercadopago.py  notificaciones.py  pagos.py  planes.py  reportes.py  rutinas.py  stats.py  turnos.py  usuarios.py  vencimientos.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  actividad.py  asistencia.py  ejercicio.py  enums.py  evaluacion_salud.py  inscripcion.py  lista_espera.py  notificacion.py  pago.py  plan.py  rutina.py  turno.py  usuario.py
app/schemas/: __init__.py  actividad.py  asistencia.py  auth.py  ejercicio.py  evaluacion_salud.py  inscripcion.py  lista_espera.py  notificacion.py  pago.py  plan.py  rutina.py  stats.py  turno.py  usuario.py  vencimiento.py
app/services/: actividad_service.py  asistencia_service.py  ejercicio_service.py  evaluacion_service.py  inscripcion_service.py  mercadopago_service.py  notificacion_service.py  pago_service.py  plan_service.py  reporte_service.py  (+5 more)
docs/: PLAN.md  auth0-resend-setup.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: migrate.ts
(+228 files in other folders)
